Add ticket detail page with booking review and cancellation features; update Redux store for booking management

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -230,6 +230,43 @@
     "leftWheel": "Left Wheel",
     "airConditioner": "Air Conditioner"
   },
+  "ticketDetail": {
+    "company": "Company",
+    "address": "Address",
+    "phoneNumber": "Phone number",
+    "date": "Date",
+    "guestInformation": "Guest Information",
+    "guestName": "Guest Name",
+    "pickUp": "Pick up",
+    "return": "Return",
+    "checkIn": "Check in",
+    "checkOut": "Check out",
+    "apartmentInformation": "Apartament Information",
+    "apartmentAddress": "Apartment address",
+    "bedrooms": "bedrooms",
+    "level": "Level",
+    "apartment": "Apartament",
+    "house": "House",
+    "beautySalon": "Beauty",
+    "services": "Services",
+    "employee": "Employee",
+    "price": "PRICE",
+    "taxesIncluded": "taxes included",
+    "backToTickets": "Back to tickets",
+    "backToHistory": "Back to history",
+    "cancel": "Cancel",
+    "notFound": "Booking not found",
+    "cancelBooking": "Cancel Booking",
+    "confirmCancel": "Are you sure you want to cancel this booking?",
+    "cancelError": "Failed to cancel booking. Please try again.",
+    "cancelSuccess": "Booking cancelled successfully",
+    "rateYourExperience": "Rate your experience:",
+    "comments": "Comments",
+    "comment": "Comment",
+    "commentPlaceholder": "Add any special requests for the here...",
+    "submit": "Submit",
+    "reviewSuccess": "Thank you for your review!"
+  },
   "errors": {
     "categoryNotFound": "Category not found",
     "pageNotFound": {
