--- a/i18n/locales/hy.json
+++ b/i18n/locales/hy.json
@@ -9,8 +9,7 @@
     "edit": "Խմբագրել",
     "notFound": "Չգտնվեց",
     "yes": "Այո",
-    "no": "Ոչ",
-    "returnHome": "Վերադառնալ գլխավոր"
+    "no": "Ոչ"
   },
   "home": {
     "categories": {
@@ -74,8 +73,7 @@
     "backToHome": "Գլխավոր էջ",
     "viewBooking": "Դիտել ամրագրումը",
     "availableTimes": "Հասանելի ժամեր",
-    "noAvailableTimes": "Ընտրված ամսաթվի համար հասանելի ժամեր չկան",
-    "book": "Ամրագրել"
+    "noAvailableTimes": "Ընտրված ամսաթվի համար հասանելի ժամեր չկան"
   },
   "auth": {
     "welcome": "Բարի գալուստ!",
@@ -98,19 +96,7 @@
     "dontHaveAccount": "Չունե՞ք հաշիվ",
     "alreadyHaveAccount": "Արդեն ունե՞ք հաշիվ",
     "signUp": "Գրանցվել",
-    "registrationSuccess": "Գրանցումը հաջողվեց։ Ստուգեք ձեր հեռախոսը հաստատման համար։",
-    "checkYourSms": "Ստուգեք ձեր SMS-ը",
-    "signUpComplete": "Գրանցումն ավարտված է!",
-    "makeBooking": "Ամրագրել",
-    "verificationFailed": "Ստուգումը ձախողվեց",
-    "recoveryDescription": "Մուտքագրեք համարը, որը օգտագործել եք գրանցման համար, որպեսզի ստանաք հաստատման կոդ։",
-    "next": "Հաջորդ",
-    "enterNewPassword": "Մուտքագրեք նոր գաղտնաբառ։",
-    "changePassword": "Փոխել գաղտնաբառը",
-    "recoveryComplete": "Հաշվի վերականգնումն ավարտված է!",
-    "passwordsDoNotMatch": "Գաղտնաբառերը չեն համընկնում",
-    "passwordTooShort": "Գաղտնաբառը պետք է լինի առնվազն 8 նիշ",
-    "passwordChangedSuccess": "Ձեր գաղտնաբառը հաջողությամբ փոխվել է: Խնդրում ենք մուտք գործել նոր գաղտնաբառով:"
+    "registrationSuccess": "Գրանցումը հաջողվեց։ Ստուգեք ձեր հեռախոսը հաստատման համար։"
   },
   "categories": {
     "title": "Կատեգորիաներ",
@@ -132,17 +118,6 @@
     "cars": "Մեքենաներ",
     "enabled": "Միացված է",
     "disabled": "Անջատված է"
-  },
-  "filters": {
-    "filterAndSort": "Զտել և դասավորել",
-    "sortingOptions": "Դասակարգման ընտրանքներ",
-    "recommended": "Առաջարկվող",
-    "newest": "Նոր",
-    "aToZ": "Ա-Ֆ աճող",
-    "zToA": "Ֆ-Ա նվազող",
-    "subcategory": "Ենթակատեգորիա",
-    "clearAll": "Մաքրել բոլորը",
-    "apply": "Կիրառել"
   },
   "header": {
     "home": "Գլխավոր",
@@ -216,18 +191,6 @@
       "bookingFailed": "Ամրագրումը չհաջողվեց։ Խնդրում ենք փորձել ևս մեկ անգամ։"
     },
     "bookingSuccess": "Ամրագրումը հաջողվեց։ Ձեր ամրագրումը հաստատված է։"
-  },
-  "errors": {
-    "categoryNotFound": "Կատեգորիան չի գտնվել",
-    "pageNotFound": {
-      "title": "ՈՒՊՍ! ԷՋԸ ՉԻ ԳՏՆՎԵԼ",
-      "description": "Ներողություն, էջը, որը փնտրում եք, գոյություն չունի։ Եթե կարծում եք, որ ինչ-որ բան կոտրված է, զեկուցեք խնդրի մասին"
-    },
-    "serverError": {
-      "title": "ՍԵՐՎԵՐԻ ՆԵՐՔԻՆ ՍԽԱԼ",
-      "description": "Սերվերը հանդիպել է ներքին սխալի կամ սխալ կոնֆիգուրացիայի և չկարողացավ կատարել ձեր հարցումը"
-    },
-    "returnHome": "Վերադառնալ"
   }
 }
 
