--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -217,6 +217,43 @@
     },
     "bookingSuccess": "Бронирование успешно! Ваше бронирование подтверждено."
   },
+  "ticketDetail": {
+    "company": "Компания",
+    "address": "Адрес",
+    "phoneNumber": "Номер телефона",
+    "date": "Дата",
+    "guestInformation": "Информация о госте",
+    "guestName": "Имя гостя",
+    "pickUp": "Получение",
+    "return": "Возврат",
+    "checkIn": "Заезд",
+    "checkOut": "Выезд",
+    "apartmentInformation": "Информация о квартире",
+    "apartmentAddress": "Адрес квартиры",
+    "bedrooms": "спален",
+    "level": "Этаж",
+    "apartment": "Квартира",
+    "house": "Дом",
+    "beautySalon": "Красота",
+    "services": "Услуги",
+    "employee": "Сотрудник",
+    "price": "ЦЕНА",
+    "taxesIncluded": "включая налоги",
+    "backToTickets": "Назад к билетам",
+    "backToHistory": "Назад к истории",
+    "cancel": "Отменить",
+    "notFound": "Бронирование не найдено",
+    "cancelBooking": "Отменить бронирование",
+    "confirmCancel": "Вы уверены, что хотите отменить это бронирование?",
+    "cancelError": "Не удалось отменить бронирование. Пожалуйста, попробуйте еще раз.",
+    "cancelSuccess": "Бронирование успешно отменено",
+    "rateYourExperience": "Оцените ваш опыт:",
+    "comments": "Комментарии",
+    "comment": "Комментарий",
+    "commentPlaceholder": "Добавьте любые особые пожелания здесь...",
+    "submit": "Отправить",
+    "reviewSuccess": "Спасибо за ваш отзыв!"
+  },
   "errors": {
     "categoryNotFound": "Категория не найдена",
     "pageNotFound": {
