Refactor booking flow by introducing context and modular components; add company selection and booking info steps; enhance Redux store with new thunks for fetching companies and services.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -49,6 +49,8 @@
       "datetime": "Date/Time",
       "final": "Final"
     },
+    "chooseCompany": "Choose a company",
+    "companiesOfferingService": "Select a company that offers this service",
     "chooseService": "Choose service",
     "chooseEmployee": "Choose employee",
     "chooseAnotherEmployee": "Choose another employee (optional)",
@@ -56,6 +58,7 @@
     "chooseDateTime": "Choose date and time",
     "bookingInfo": "Booking info",
     "additionalServices": "Additional services",
+    "noAdditionalServices": "No additional services available",
     "total": "Total",
     "date": "Date",
     "company": "Company",
