Add new API methods for user profile management. Enhance authentication flow by saving intended URLs for redirection after login.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -7,9 +7,13 @@
     "login": "Login",
     "register": "Register",
     "edit": "Edit",
+    "save": "Save",
+    "cancel": "Cancel",
+    "submit": "Submit",
     "notFound": "Not Found",
     "yes": "Yes",
     "no": "No",
+    "ok": "OK",
     "search": "Search",
     "returnHome": "Return Home"
   },
@@ -162,12 +166,35 @@
     "phoneNumber": "Phone number",
     "email": "Email",
     "password": "Password",
+    "editProfile": "Edit Profile",
+    "editPhone": "Edit Phone Number",
+    "changePassword": "Change Password",
+    "currentPassword": "Current Password",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
     "noActiveTickets": "No Active Tickets",
     "noActiveTicketsDescription": "You don't have any active tickets at the moment",
     "noFavorites": "No Favorites",
     "noFavoritesDescription": "You haven't added any favorites yet",
     "noHistory": "No History",
-    "noHistoryDescription": "Your booking history is empty"
+    "noHistoryDescription": "Your booking history is empty",
+    "edit": {
+      "editProfile": "Edit profile",
+      "editPhone": "Edit phone",
+      "editPassword": "Edit password",
+      "name": "Name",
+      "surname": "Surname",
+      "email": "Email",
+      "phonePlaceholder": "Number (ex. 091234567)",
+      "currentPassword": "Current password",
+      "newPassword": "New password",
+      "confirmPassword": "Confirm password",
+      "profileUpdated": "Profile updated successfully",
+      "phoneUpdated": "Phone number updated successfully",
+      "passwordUpdated": "Password updated successfully",
+      "passwordsDoNotMatch": "Passwords do not match",
+      "passwordTooShort": "Password must be at least 6 characters"
+    }
   },
   "footer": {
     "becomePartner": {
