Add About page with Tariffs and Join Us sections; implement review functionality with pagination and API integration

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -223,6 +223,9 @@
     "services": "Services",
     "employees": "Employees",
     "portfolio": "Portfolio",
+    "reviews": "Reviews",
+    "noReviews": "No reviews yet",
+    "beFirstToReview": "Be the first to review this company!",
     "about": "About",
     "book": "Book",
     "showLess": "Less",
