Refactor phone input handling across multiple components, implement phone number formatting utility, and enhance user authentication flow. Update UI elements for better user experience, including modal dialogs for logout confirmation and improved input styling. Remove unused toast component and related styles.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -42,7 +42,8 @@
     "status": {
       "inProcess": "In process",
       "pending": "Pending",
-      "cancelled": "Cancelled",
+      "canceled": "Canceled",
+      "rejected": "Rejected",
       "approved": "Approved",
       "completed": "Completed"
     },
@@ -163,6 +164,8 @@
     "favorite": "Favorite",
     "history": "History",
     "logout": "Log out",
+    "logoutConfirmTitle": "Are you sure you want to log out?",
+    "logoutConfirmDescription": "You will need to sign in again to access your account.",
     "phoneNumber": "Phone number",
     "email": "Email",
     "password": "Password",
