Introduce ShareButton component for sharing functionality across various components.

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -15,7 +15,8 @@
     "no": "No",
     "ok": "OK",
     "search": "Search",
-    "returnHome": "Return Home"
+    "returnHome": "Return Home",
+    "linkCopied": "Link copied!"
   },
   "home": {
     "categories": {
