--- a/i18n/locales/hy.json
+++ b/i18n/locales/hy.json
@@ -9,7 +9,8 @@
     "edit": "Խմբագրել",
     "notFound": "Չկա",
     "yes": "Այո",
-    "no": "Ոչ"
+    "no": "Ոչ",
+    "linkCopied": "Հղումը պատճենված է!"
   },
   "home": {
     "categories": {
