--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -11,7 +11,8 @@
     "yes": "Да",
     "no": "Нет",
     "ok": "ОК",
-    "returnHome": "На главную"
+    "returnHome": "На главную",
+    "linkCopied": "Ссылка скопирована!"
   },
   "home": {
     "categories": {
