--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -12,11 +12,14 @@
     "no": "Нет",
     "ok": "ОК",
     "returnHome": "На главную",
-    "linkCopied": "Ссылка скопирована!"
+    "linkCopied": "Ссылка скопирована!",
+    "loadMore": "Загрузить ещё",
+    "info": "Инфо",
+    "close": "Закрыть"
   },
   "home": {
     "categories": {
-      "searchNearMe": "Искать рядом →",
+      "searchNearMe": "Искать рядом",
       "beautySalon": {
         "title": "САЛОНЫ КРАСОТЫ",
         "description": "Найдите лучшие салоны красоты рядом с вами"
@@ -141,6 +144,7 @@
   },
   "filters": {
     "filterAndSort": "Фильтр и сортировка",
+    "filter": "Фильтр",
     "sortingOptions": "Параметры сортировки",
     "recommended": "Рекомендуемые",
     "newest": "Новые",
@@ -152,6 +156,9 @@
   },
   "header": {
     "home": "Главная",
+    "booking": "Бронирование",
+    "nearMe": "Рядом",
+    "aboutUs": "О нас",
     "categories": "Категории",
     "language": "Язык"
   },
@@ -290,4 +297,3 @@
     "returnHome": "Вернуться"
   }
 }
-
