--- a/i18n/locales/hy.json
+++ b/i18n/locales/hy.json
@@ -1,43 +1,53 @@
 {
   "common": {
-    "loading": "Բեռնվում է",
+    "loading": "Բեռնում...",
     "error": "Սխալ",
     "tryAgain": "Կրկնել",
-    "logout": "Դուրս գալ",
+    "logout": "Ելք",
     "login": "Մուտք",
     "register": "Գրանցում",
     "edit": "Խմբագրել",
-    "notFound": "Չկա",
+    "save": "Պահպանել",
+    "cancel": "Չեղարկել",
+    "submit": "Հաստատել",
+    "notFound": "Չգտնվեց",
     "yes": "Այո",
     "no": "Ոչ",
-    "linkCopied": "Հղումը պատճենված է!"
+    "ok": "Լավ",
+    "search": "Որոնում",
+    "returnHome": "Գլխավոր",
+    "linkCopied": "Հղումը պատճենվեց",
+    "loadMore": "Բեռնել ավելին",
+    "info": "Տեղեկություն",
+    "close": "Փակել"
   },
   "home": {
     "categories": {
-      "searchNearMe": "Մոտակայքում որոնել",
+      "searchNearMe": "Մոտակայքում",
       "beautySalon": {
-        "title": "Գեղեցկության սրահներ",
-        "description": "Լավագույն սրահները ձեր մոտ"
+        "title": "ԳԵՂԵՑԿՈՒԹՅԱՆ ՍՐԱՀՆԵՐ",
+        "description": "Գեղեցկության և խնամքի ծառայություններ"
       },
       "apartments": {
-        "title": "Բնակարաններ",
-        "description": "Վարձույթ կամ վաճառք"
+        "title": "ԲՆԱԿԱՐԱՆՆԵՐ",
+        "description": "Օրավարձով բնակարաններ"
       },
       "carRental": {
-        "title": "Մեքենաների վարձույթ",
-        "description": "Արագ և հարմար"
+        "title": "ԱՎՏՈՎԱՐՁՈՒՅԹ",
+        "description": "Մեքենաների վարձույթ"
       },
       "explore": {
-        "title": "Բոլոր կատեգորիաները",
-        "description": "Դիտել ավելին"
+        "title": "ԲՈԼՈՐ ԿԱՏԵԳՈՐԻԱՆԵՐԸ",
+        "description": "Դիտել բոլոր բաժինները"
       }
     }
   },
   "booking": {
     "status": {
       "inProcess": "Ընթացքում",
-      "pending": "Սպասվող",
-      "cancelled": "Չեղարկված",
+      "pending": "Սպասման մեջ",
+      "canceled": "Չեղարկված",
+      "rejected": "Մերժված",
       "approved": "Հաստատված",
       "completed": "Ավարտված"
     },
@@ -45,18 +55,21 @@
       "company": "Ընկերություն",
       "service": "Ծառայություն",
       "employee": "Աշխատակից",
-      "datetime": "Ամսաթիվ / Ժամ",
-      "final": "Վերջ"
+      "datetime": "Ամսաթիվ/Ժամ",
+      "final": "Վերջնական"
     },
-    "chooseService": "Ընտրեք ծառայությունը",
-    "chooseEmployee": "Ընտրեք աշխատակցին",
+    "chooseCompany": "Ընտրեք ընկերություն",
+    "companiesOfferingService": "Ընտրեք ծառայություն մատուցող ընկերություն",
+    "chooseService": "Ընտրեք ծառայություն",
+    "chooseEmployee": "Ընտրեք աշխատակից",
     "chooseAnotherEmployee": "Այլ աշխատակից (ըստ ցանկության)",
     "selectedEmployee": "Ընտրված աշխատակից",
-    "chooseDateTime": "Ընտրեք օրն ու ժամը",
+    "chooseDateTime": "Ընտրեք օր և ժամ",
     "bookingInfo": "Ամրագրման տվյալներ",
     "additionalServices": "Լրացուցիչ ծառայություններ",
+    "noAdditionalServices": "Լրացուցիչ ծառայություններ չկան",
     "total": "Ընդամենը",
-    "date": "Ամսաթիվ",
+    "date": "Օր",
     "company": "Ընկերություն",
     "service": "Ծառայություն",
     "services": "Ծառայություններ",
@@ -65,16 +78,17 @@
     "minutes": "րոպե",
     "mainService": "Հիմնական ծառայություն",
     "price": "Գին",
-    "dram": "դր.",
+    "dram": "դրամ",
     "back": "Հետ",
     "continue": "Շարունակել",
     "finish": "Ավարտել",
-    "thankYou": "Շնորհակալություն",
-    "confirmationMessage": "Ձեր ամրագրումը ընդունված է",
+    "thankYou": "Շնորհակալություն ամրագրման համար",
+    "confirmationMessage": "Ձեր ամրագրումը հաջողությամբ կատարվել է։",
     "backToHome": "Գլխավոր էջ",
     "viewBooking": "Դիտել ամրագրումը",
-    "availableTimes": "Հասանելի ժամեր",
-    "noAvailableTimes": "Ժամեր չկան"
+    "availableTimes": "Ազատ ժամեր",
+    "noAvailableTimes": "Ազատ ժամ չկա",
+    "book": "Ամրագրել"
   },
   "auth": {
     "welcome": "Բարի գալուստ",
@@ -82,9 +96,9 @@
     "userId": "Օգտատիրոջ ID",
     "name": "Անուն",
     "phone": "Հեռախոս",
-    "accessToken": "Թոքեն",
-    "expires": "Ժամկետ",
-    "authenticationDemo": "Նույնականացում",
+    "accessToken": "Token",
+    "expires": "Վավեր է մինչև",
+    "authenticationDemo": "Ավտենտիկացիայի դեմո",
     "firstName": "Անուն",
     "lastName": "Ազգանուն",
     "password": "Գաղտնաբառ",
@@ -93,104 +107,63 @@
     "registerButton": "Գրանցվել",
     "phoneNumber": "Համար",
     "forgotPassword": "Մոռացե՞լ եք գաղտնաբառը",
-    "accountRecovery": "Վերականգնում",
-    "dontHaveAccount": "Հաշիվ չունե՞ք",
+    "accountRecovery": "Հաշվի վերականգնում",
+    "dontHaveAccount": "Չունե՞ք հաշիվ",
     "alreadyHaveAccount": "Արդեն ունե՞ք հաշիվ",
     "signUp": "Գրանցվել",
-    "registrationSuccess": "Գրանցումը հաջողվեց"
+    "registrationSuccess": "Գրանցումը հաջող է։ Ստուգեք SMS-ը։",
+    "checkYourSms": "Ստուգեք SMS-ը",
+    "signUpComplete": "Գրանցումն ավարտված է",
+    "makeBooking": "Ամրագրել",
+    "verificationFailed": "Ստուգումը ձախողվեց",
+    "recoveryDescription": "Մուտքագրեք գրանցման հեռախոսահամարը։",
+    "next": "Հաջորդը",
+    "enterNewPassword": "Մուտքագրեք նոր գաղտնաբառ",
+    "changePassword": "Փոխել գաղտնաբառը",
+    "recoveryComplete": "Հաշիվը վերականգնված է",
+    "passwordsDoNotMatch": "Գաղտնաբառերը չեն համընկնում",
+    "passwordTooShort": "Գաղտնաբառը շատ կարճ է",
+    "passwordChangedSuccess": "Գաղտնաբառը փոխված է։ Մուտք գործեք նորով։"
   },
   "categories": {
     "title": "Կատեգորիաներ",
-    "description": "Բոլոր կատեգորիաները",
-    "noCategories": "Չկան",
-    "noCategoriesDescription": "Տվյալներ չկան",
-    "loadingCategories": "Բեռնվում են",
+    "description": "Դիտեք հասանելի կատեգորիաները",
+    "noCategories": "Կատեգորիաներ չկան",
+    "noCategoriesDescription": "Այս պահին հասանելի չեն",
+    "loadingCategories": "Բեռնում...",
     "company": "Ընկերություն",
     "service": "Ծառայություն",
     "search": "Որոնում",
-    "filterAndSort": "Ֆիլտր / տեսակավորում",
+    "filterAndSort": "Ֆիլտր և դասավորում",
     "noCompanies": "Ընկերություններ չկան",
-    "noCompaniesDescription": "Տվյալներ չկան",
+    "noCompaniesDescription": "Այս կատեգորիայում չկա",
     "noServices": "Ծառայություններ չկան",
-    "noServicesDescription": "Տվյալներ չկան",
+    "noServicesDescription": "Հասանելի չէ",
     "companies": "Ընկերություններ",
     "services": "Ծառայություններ",
     "apartments": "Բնակարաններ",
     "cars": "Մեքենաներ",
-    "enabled": "Միացված",
+    "enabled": "Ակտիվ",
     "disabled": "Անջատված"
+  },
+  "filters": {
+    "filterAndSort": "Ֆիլտր և դասավորում",
+    "filter": "Ֆիլտր",
+    "sortingOptions": "Դասավորում",
+    "recommended": "Առաջարկվող",
+    "newest": "Նորերը",
+    "aToZ": "Ա-ից Զ",
+    "zToA": "Զ-ից Ա",
+    "subcategory": "Ենթակատեգորիա",
+    "clearAll": "Մաքրել",
+    "apply": "Կիրառել"
   },
   "header": {
     "home": "Գլխավոր",
+    "booking": "Ամրագրում",
+    "nearMe": "Մոտակայքում",
+    "aboutUs": "Մեր մասին",
     "categories": "Կատեգորիաներ",
     "language": "Լեզու"
-  },
-  "profile": {
-    "personalInformation": "Անձնական տվյալներ",
-    "activeTickets": "Ակտիվ տոմսեր",
-    "favorite": "Ընտրյալներ",
-    "history": "Պատմություն",
-    "logout": "Դուրս գալ",
-    "phoneNumber": "Հեռախոս",
-    "email": "Էլ․ փոստ",
-    "password": "Գաղտնաբառ",
-    "noActiveTickets": "Չկան",
-    "noActiveTicketsDescription": "Ակտիվ տոմսեր չկան",
-    "noFavorites": "Չկան",
-    "noFavoritesDescription": "Ընտրյալներ չկան",
-    "noHistory": "Դատարկ է",
-    "noHistoryDescription": "Պատմություն չկա"
-  },
-  "footer": {
-    "becomePartner": {
-      "question": "Ցանկանու՞մ եք դառնալ մեր",
-      "highlight": "գործընկերը",
-      "button": "Միանալ"
-    },
-    "copyright": "Բոլոր իրավունքները պաշտպանված են"
-  },
-  "company": {
-    "reservation": "Ամրագրում",
-    "checkIn": "Ժամանում",
-    "checkOut": "Մեկնում",
-    "guests": "Հյուրեր",
-    "guest": "հյուր",
-    "pickUp": "Վերցնել",
-    "return": "Վերադարձնել",
-    "comments": "Մեկնաբանություններ",
-    "addComment": "Գրել մեկնաբանություն",
-    "bookingForSomeoneElse": "Մյուսի համար",
-    "guestName": "Հյուրի անուն",
-    "guestPhone": "Հյուրի հեռախոս",
-    "total": "Ընդամենը",
-    "forDays": "{count, plural, one {# օր} other {# օր}}",
-    "reserve": "Ամրագրել",
-    "services": "Ծառայություններ",
-    "employees": "Աշխատակիցներ",
-    "portfolio": "Պորտֆոլիո",
-    "about": "Մանրամասն",
-    "book": "Ամրագրել",
-    "showLess": "Քիչ",
-    "aboutCompany": "Ընկերության մասին",
-    "aboutApartment": "Բնակարանի մասին",
-    "aboutCar": "Մեքենայի մասին",
-    "workHours": "Աշխ. ժամեր",
-    "address": "Հասցե",
-    "phones": "Հեռախոսներ",
-    "closed": "Փակ",
-    "noServices": "Չկան",
-    "noEmployees": "Չկան",
-    "noPortfolio": "Չկա",
-    "apartment": "Բնակարան",
-    "house": "Տուն",
-    "totalSquare": "Մակերես",
-    "rooms": "Սենյակներ",
-    "errors": {
-      "guestNameRequired": "Անունը պարտադիր է",
-      "guestPhoneRequired": "Հեռախոսը պարտադիր է",
-      "guestPhoneInvalid": "Սխալ հեռախոսահամար",
-      "bookingFailed": "Ամրագրումը չհաջողվեց"
-    },
-    "bookingSuccess": "Ամրագրումը հաջողվեց"
   }
 }
